fix gap between categories on items page

--- a/public/css/items.css
+++ b/public/css/items.css
@@ -161,6 +161,7 @@ section header {
 
 section .categories ul {
   display: flex;
+  gap: 30px;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
@@ -169,7 +170,6 @@ section .categories ul {
 section .categories ul li form button {
   padding: 12px 20px;
   background: var(--yellow);
-  margin: 20px;
   letter-spacing: 1px;
   cursor: pointer;
   border: 2px solid #000;
@@ -180,7 +180,6 @@ section .categories ul li form button.active {
   padding: 12px 20px;
   background: #000;
   color: var(--yellow);
-  margin: 20px;
   letter-spacing: 1px;
   cursor: pointer;
   border: 2px solid #000;
